--- a/mpvue-shop/src/pages/index/style.less
+++ b/mpvue-shop/src/pages/index/style.less
@@ -205,4 +205,151 @@
         }
       }
   }
+  .topicList{
+      margin-top: 20rpx;
+      background-color: #fff;
+      &-top{
+          text-align: center;//文字居中
+          padding: 36rpx;
+          vertical-align: middle;
+          .icon{
+              display: inline-block;
+              width: 32rpx;
+              height: 32rpx;
+              margin-left: 5rpx;
+              background: url('../../../static/images/right.png') no-repeat;
+              background-size: 100% 100%;
+              vertical-align: middle;
+          }
+      }
+      .list{
+          .scroll-view{
+              white-space: nowrap;//规定段落中的文本不进行换行
+              li{
+                  display: inline-block;
+                  width: 575rpx;
+                  margin-left: 25rpx;
+                  img{
+                      display: block;//块级元素占一行
+                      width: 575rpx;
+                      height: 325rpx;
+                      border-radius: 10rpx;
+                  }
+                  .btom{
+                      display: flex;
+                      justify-content: space-between;
+                      margin-top: 42rpx;
+                      width: 100%;
+                      div:nth-child(1) {
+                          width: 90%;
+                          p{
+                              margin-top: 8rpx;
+                          }
+                          p:nth-child(1) {
+                              font-size: 30rpx;
+                              font-weight: bold;//字体加粗
+                          }
+                          p:nth-child(2) {
+                            font-size: 32rpx;
+                            width: 90%;
+                            color: #8a8a8a;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                        }
+                      }
+                      div:nth-child(2) {
+                          margin-top: 8rpx;
+                          color: #9c3232;
+                          font-size: 24rpx;
+                      }
+                  }
+              }
+              li:last-child{
+                  margin-right: 25rpx;
+              }
+          }
+      }
+  }
+  .newcategory {
+    margin-top: 20rpx;
+    padding: 0 10rpx 25rpx 10rpx;
+
+    .head {
+      padding: 25rpx 0;
+      text-align: center;
+    }
+
+    .sublist {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      width: 730rpx;
+      margin: 0 auto;
+
+      div {
+        width: 360rpx;
+        background: #fff;
+        margin-bottom: 10rpx;
+        padding-bottom: 10rpx;
+
+        img {
+          display: block;
+          width: 302rpx;
+          height: 302rpx;
+          margin: 0 auto;
+        }
+
+        p {
+          margin-bottom: 5rpx;
+          text-indent: 1em;
+        }
+
+        p:nth-child(2) {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          width: 98%;
+        }
+
+        p:nth-child(3) {
+          color: #9c3232;
+        }
+      }
+
+      .last {
+        display: block;
+        width: 302rpx;
+        height: 302rpx;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        p {
+          height: 33rpx;
+          width: 100%;
+          line-height: 33rpx;
+          color: #333;
+          font-size: 33rpx;
+          text-align: center;
+        }
+
+        .icon {
+          display: inline-block;
+          width: 70rpx;
+          height: 70rpx;
+          background: url('../../../static/images/rightbig.png') no-repeat;
+          background-size: 100% 100%;
+          margin-top: 60rpx;
+        }
+      }
+
+      div:nth-child(2n) {
+        margin-left: 10rpx;
+      }
+    }
+  }
 }
