--- a/mpvue-shop/src/pages/goods/style.less
+++ b/mpvue-shop/src/pages/goods/style.less
@@ -98,4 +98,108 @@
             background-size: 100% 100%;
         }
     }
+    .pop{
+        position: fixed;//相对于浏览器屏幕进行定位
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);//朦胧色
+    }
+    .attr-pop{
+        position: fixed;
+        width: 100%;
+        height: 500rpx;
+        bottom: -500rpx;
+        transition: all 400ms ease;
+        box-sizing: border-box;
+        padding: 30rpx;
+        background: #fff;
+        .top{
+            display: flex;
+            margin-bottom: 35rpx;
+            position: relative;
+            .close{
+                position: absolute;
+                right: 0;
+                top: 0;
+                font-size: 30rpx;
+                color: #999;
+            }
+            .left{
+                float: left;
+                height: 177rpx;
+                width: 177rpx;
+                margin-right: 30rpx;
+                img{
+                    float: left;
+                    height: 177rpx;
+                    width: 177rpx;
+                }
+            }
+            .right{
+                flex: 1;
+                display: flex;
+                align-items: flex-end;
+                p{
+                    width: 100%;
+                    line-height: 45rpx;
+                }
+                p:nth-child(1){
+                    color: #b4282d;
+                }
+            }
+        }
+        .b{
+            .count{
+                width: 322rpx;
+                height: 71rpx;
+                line-height: 71rpx;
+                display: flex;
+                border:1rpx solid #ccc;
+                margin-top: 20rpx;
+                div{
+                    width: 90rpx;
+                    text-align: center;
+                }
+                input{
+                    flex: 1;
+                    height: 100%;
+                    text-align: center;
+                    border-left: 1px solid #ccc;
+                    border-right: 1px solid #ccc;
+                }
+            }
+        }
+    }
+    .fadeup{
+        transform: translateY(-500rpx);
+    }
+    .attribute{
+        padding: 20rpx -30rpx;
+        background-color: #fff;
+        margin-bottom: 20rpx;
+        .head{
+            font-size: 38rpx;
+            padding: 20px 0;
+        }
+        .item{
+            display: flex;
+            background: #f7f7f7;
+            padding: 20rpx 0;
+            margin: 20rpx;
+            div:nth-child(1) {
+                width: 134rpx;
+                font-size: 25rpx;
+                color: #999;
+
+            }
+            div:nth-child(2) {
+                flex: 1;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+        }
+    }
 }
